codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_markdown.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: normalize_agent_center_snapshot(&cached)
---
"  Agent command center  Group: Project  g                                                       "
"   All 1   Needs you 0   Working 0   Ready 1   Inactive 0                      tab/⇧tab filter  "
"  ────────────────────────────────────────────────────────────────────────────────────────────  "
"      Tasks                                           │ Task details                            "
"  /tmp/project  1                                     │                                         "
"  › ○ Review parser                                   │ Review parser                           "
"                                                      │ ○ Ready                                 "
"                                                      │                                         "
"                                                      │ Model: Unknown                          "
"                                                      │ Reasoning: Unknown                      "
"                                                      │                                         "
"                                                      │ Project                                 "
"                                                      │ /tmp/project                            "
"                                                      │                                         "
"                                                      │ Last message                            "
"                                                      │ Findings                                "
"                                                      │                                         "
"                                                      │ • Fixed parsing and tokens with a long  "
"                                                      │   explanation that wraps.               "
"                                                      │                                         "
"                                                      │ • Kept compatibility.                   "
"                                                      │                                         "
"                                                      │ ╭─ rust ────────────────────────── ⎘ ╮  "
"                                                      │ │ let token = 1;                     │  "
"                                                      │ ╰────────────────────────────────────╯  "
"                                                      │                                         "
"                                                      │ Prompt                                  "
"                                                      │ Review parser and token handling.       "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"  ? help  esc back  ↑/↓ move  enter open  n new                                                 "
