codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_markdown_long_lines.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "normalize_agent_center_snapshot(render_bottom_popup(&app.chat_widget, 96))"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 1   Inactive 0                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                           │ Task details
  /tmp/project  1                                     │
  › ○ Review parser                                   │ Review parser
                                                      │ ○ Ready
                                                      │
                                                      │ Model: Unknown
                                                      │ Reasoning: Unknown
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Last message
                                                      │ ╭─ code ────────── copy · /copy-code ╮
                                                      │ │ let explanation = "A long code lin │
                                                      │ │ e should wrap inside the task deta │
                                                      │ │ ils panel.";                       │
                                                      │ ╰────────────────────────────────────╯
                                                      │
                                                      │ Prompt
                                                      │ ╭─ code ────────── copy · /copy-code ╮
                                                      │ …
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
